# Shoot_em_UP

./: .gitignore
Bericht/: Game-programming.md  pandoc.txt  quellen.txt
Game/: CMakeLists.txt  readme.md  windows-toolchain.cmake
Game/build-windows/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
Game/build-windows/Release/: Game  libSDL3_mixer.so.0.0.0  libSDL3_ttf.so.0.3.0
Game/build-windows/SDL/: Makefile  SDL3headersTargets.cmake  SDL3sharedTargets.cmake  SDL3testTargets.cmake  cmake_install.cmake
Game/build-windows/SDL/include-config-release/build_config/: SDL_build_config.h
Game/build-windows/SDL_mixer/: Makefile  cmake_install.cmake
Game/build-windows/SDL_ttf/: Makefile  cmake_install.cmake
Game/src/: AppContext.h  Enemy.h  Game.cpp  Game.h  GameOver.cpp  GameOver.h  GameState.h  GameWon.cpp  GameWon.h  Languages.h  Menu.cpp  Menu.h  MusicPlayer.cpp  MusicPlayer.h  Player.h  Settings.cpp  Settings.h  TranslationKeys.h  Utils.cpp  Utils.h  main.cpp
Game/src/Core/: AppContext.h  GameState.h  MusicPlayer.cpp  Utils.cpp  main.cpp
Game/src/Game/: Game.cpp  Game.h
Game/src/Game/Entities/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
Game/src/Game/Managers/: BulletManager.cpp  BulletManager.h  CollisionManager.cpp  CollisionManager.h  EnemyManager.cpp  EnemyManager.h
Game/src/Localization/: Translations.h
Game/src/UI/: GameOver.cpp  GameOver.h  GameWon.cpp  GameWon.h  Menu.cpp  Menu.h  Settings.cpp  Settings.h
